{
  "today": "Today",
  "calendar": "Calendar",
  "moments": "Moments",
  "you": "You"
}
